--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-three-scroll",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://flytaly.github.io/react-three-scroll/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -17,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
